--- a/MBS_WEB_DB/DB/News.txt
+++ b/MBS_WEB_DB/DB/News.txt
@@ -1,9 +1,6 @@
-1. 백약품 위생관리 매우 안좋은 판정 받음.
-2. 한솥밥 이번 신매뉴 대성공!
-3. 근대건설&제이케이아이디 연성대학교와 알 수 없는 계약 맺음.
-4. 상식없는 우리아이에 출연한 김군 자성교육이 손대니 영재소리 들어.
-5. 사과&사성 전자, 또 서로 고소. 사과가 이길것 같음.
-6. 근대마법공학 우리나라의 마법공학의 선두자!
-7. 마인크로소프트 사과를 고소. 이유 불문.
-8. 번성교육 역사 학습지 파문.
-9. 백병원 백약품의 약품 그대로써 파문.
+﻿1. 백약품 검사 결과 조작돼, 배후에 흑약품 있어.
+2. 백병원 백약품 약 4배 주가 상승. 더 상승 예상
+3. 잉크린 고객센터 파문
+4. 마인 시스템 마인크로소프트와 손잡나?
+5. 현대모발 결국 근대모발 소송에서 승리
+6. 현대음악 가상악기 선두자!
